Add link to PDF on stable diffusion prompting

--- a/01.md
+++ b/01.md
@@ -7,7 +7,7 @@ Craft a captivating story told through a sequence of 4-5 images, created using S
 **Hints:**
 
   - Story Crafting: Start with a clear storyline. Think of each image as a chapter in your story 
-  - Prompt Engineering: For each image, craft detailed prompts. The more specific you are, the better. However, avoid overly complicated prompts as they may lead to confusion. Include descriptors for subject, environment, mood, etc. Checkout different prompting techniques online if you are new to prompt engineering, here is a pdf on prompting for stable diffusion I found online 
+  - Prompt Engineering: For each image, craft detailed prompts. The more specific you are, the better. However, avoid overly complicated prompts as they may lead to confusion. Include descriptors for subject, environment, mood, etc. Checkout different prompting techniques online if you are new to prompt engineering, here is [a pdf on prompting for stable diffusion](https://cdn.openart.ai/assets/Stable%20Diffusion%20Prompt%20Book%20From%20OpenArt%2011-13.pdf) I found online 
   - Sequencing: Ensure each image has a logical or thematic connection to the next, maintaining a consistent narrative flow. 
   - Narrative Coherence: The challenge is to create a coherent visual story, where each image is both a standalone piece and a part of the larger narrative. 
 
