--- a/04.md
+++ b/04.md
@@ -5,7 +5,7 @@
 
 **Objective:**
 
-Develop a retrieval-based chat application using a vector database, integrating fact-checking via Prediction Guard APIs, within the Intel Developer Cloud (IDC) environment. Examples include PDF chat, Wiki Chat, image search with chat etc. Evaluation is based on the effective use of Prediction Guard LLM APIs and vector DB, factuality measure, and practical utility.
+Develop a retrieval-based chat application using a vector database, integrating fact-checking and LLM chat capability via Prediction Guard APIs, within the Intel Developer Cloud (IDC) environment. Examples include PDF chat, Wiki Chat, image search with chat etc. Evaluation is based on the effective use of Prediction Guard LLM APIs and vector DB, factuality measure, and practical utility.
 
 **Hashtags for submissions and quesions**: #challenge4sub , #question, announcements from org team will use hashtag #annoucements
 
