Update 03.md - correct Odyssey

--- a/03.md
+++ b/03.md
@@ -1,4 +1,4 @@
-## Challenge 3: Flipbook Odessey - Released on December 7, 2023, 9:00 AM PST
+## Challenge 3: Flipbook Odyssey - Released on December 7, 2023, 9:00 AM PST
 
 <div align=center>
 <img width="800" alt="image" src="https://github.com/adventofgenai/challenges/assets/786476/bc0d1ad9-86b5-4853-be84-c8a4eb39c862">
