Correct factuality link

--- a/04.md
+++ b/04.md
@@ -14,7 +14,7 @@ Develop a retrieval-based chat application using a vector database, integrating 
 - Familiarize with Retrieval-Augmented Generation (RAG) from the available [notebook](https://docs.predictionguard.com/usingllms/augmentation#retrieval-augmentated-generation-rag), as well as the comprehensive descriptions found at  [llama-index](https://docs.llamaindex.ai/en/latest/getting_started/concepts.html)  and [langchain](https://python.langchain.com/docs/use_cases/question_answering/) , to understand how it effectively combines retrieval and generation models for generating responses.
 - Dan from Prediction Guard has posted in the channel an excellent video on what RAG is and how to integrate it for this hack, please check it out.
 - Choose a suitable vector database to ingest data (e.g., Wikipedia articles, PDF documents) for the application and ensure efficient querying – for example [LanceDB](https://github.com/lancedb/lancedb), which is an embedded database you can install using pip.
-- Incorporate Prediction Guard's [fact-checking features](https://docs.predictionguard.com/output/checks) for verifying information accuracy.
+- Incorporate Prediction Guard's [fact-checking features](https://docs.predictionguard.com/reference/factuality) for verifying information accuracy.
 - Utilize the LLM API for generating coherent and contextually appropriate responses.
 - Test different configurations of the LLM API for optimal response generation.
 - Focus on the chat application's user experience, making it intuitive and practical for real-world scenarios.
