--- a/05.md
+++ b/05.md
@@ -1,11 +1,14 @@
 # Challenge 5: Python Code Explainer - Released on December 9, 2023, 9:00 AM PST
 
+<div align=center>
 <img width="800" alt="image" src="https://github.com/adventofgenai/challenges/assets/786476/381756de-c60f-4090-a77e-882335496087">
-
+</div>
 
 **Objective:**
 
-Develop a Python-based tool using RAG with a vector DB and LLM APIs (e.g., with the WizardCoder model) to generate concise explanations for Python code snippets. The solution should leverage open-source documentation and datasets to offer accurate, user-friendly insights into code functionality, focusing on clarity and ease of understanding.
+Develop a Python-based tool using [RAG](https://docs.predictionguard.com/usingllms/augmentation#retrieval-augmentated-generation-rag) with a vector DB,  Prediction Guard LLM APIs (e.g., with the [WizardCoder model](https://docs.predictionguard.com/models/details) or local LLM models like CodeLLama on IDC to generate concise explanations for Python code snippets. The solution should leverage open-source documentation and datasets to offer accurate, user-friendly insights into code functionality, focusing on clarity and ease of understanding.
+
+The tool should have a user inteface (not a front end, this could be a input box in Jupyter Notebook) that takes python code and natural language questions as input and should be able to respond accurately to answer their question.
 
 **Hints:**
 
@@ -17,12 +20,12 @@ Develop a Python-based tool using RAG with a vector DB and LLM APIs (e.g., with 
 
 **Technical Setup:**
 
-Select a vector database, add extensive Python docs to it and integrate a model using Prediction Guard’s LLM API such as WizardCoder or use a local model like codeLlama for generating explanations. Utilize the RAG to link code snippets with relevant documentation and explanations.
-Documentation: Document the development process, including the selection of databases, integration of LLM APIs, and any challenges faced, limitations in ensuring the accuracy and clarity of explanations.
+Select a vector database, add extensive Python docs to it and integrate a model using Prediction Guard’s LLM API such as WizardCoder or use a local model like codeLlama for generating explanations. Utilize the RAG to link code snippets with relevant and accurate documentation and explanations.
 
 
 **Documentation:**
 
-Document the development process, including the selection of databases, integration of LLM APIs, and any challenges faced, limitations in ensuring the accuracy and clarity of explanations.
-Difficulty: Advanced 
+Document the development process, including the selection of databases, integration of LLM APIs, and any challenges faced,any limitations that you saw in ensuring the accuracy and clarity of explanations.
+
+**Difficulty:** Advanced 
 
