--- a/05.md
+++ b/05.md
@@ -6,7 +6,7 @@
 
 **Objective:**
 
-Develop a Python-based tool using [RAG](https://docs.predictionguard.com/usingllms/augmentation#retrieval-augmentated-generation-rag) with a vector DB,  Prediction Guard LLM APIs (e.g., with the [WizardCoder model](https://docs.predictionguard.com/models/details) or local LLM models like CodeLLama on IDC to generate concise explanations for Python code snippets. The solution should leverage open-source documentation and datasets to offer accurate, user-friendly insights into code functionality, focusing on clarity and ease of understanding.
+Develop a Python-based tool using [RAG](https://docs.predictionguard.com/usingllms/augmentation#retrieval-augmentated-generation-rag) with a vector DB like [LanceDB](https://github.com/lancedb/lancedb),  Prediction Guard LLM APIs (e.g., with the [WizardCoder model](https://docs.predictionguard.com/models/details) or local LLM models like CodeLLama on IDC to generate concise explanations for Python code snippets. The solution should leverage open-source documentation and datasets to offer accurate, user-friendly insights into code functionality, focusing on clarity and ease of understanding.
 
 The tool should have a user inteface (not a front end, this could be a input box in Jupyter Notebook) that takes python code and natural language questions as input and should be able to respond accurately to answer their question.
 
